# libDG

./: Bayesian_config.py  README.md  benchmark_bayes.sh  main_Bayes.py  main_Bayes_old.py  pyproject.toml  test_out.sh
libdg/: arg_parser.py
libdg/algos/: builder_deepall.py  builder_m2yd.py  builder_matchdg.py  builder_matchdg_hdiva.py  zoo_algos.py
libdg/algos/compos/: matchdg_ctr_erm.py  matchdg_match.py
libdg/algos/observers/: b_obvisitor.py  b_obvisitor_clustering.py  bnn_obvisitor.py
libdg/algos/trainers/: train_basic.py  train_bnn.py
libdg/compos/: nn.py  nn_alex.py
libdg/compos/exp/: exp_main.py  exp_utils.py
libdg/compos/vae/compos/: encoder.py
libdg/dsets/: a_dset_mnist_color_rgb_solo.py  dset_mnist_color_solo_default.py  utils_jigsaw_wrapper.py
libdg/models/: model_deep_all.py  model_diva.py  model_hduva.py  model_m2yd.py  wrapper_matchdg.py
libdg/models/bnn/: BBBdistributions.py  BBBlayers.py  B_net_small.py  B_net_small0.py  BayesNet3Conv1FC.py  Bayesian3Conv3FC.py  BayesianAlexNet.py  F3Conv3FC.py  F_net_small.py  dist_bayes.py  layers_base.py  layers_linear.py  layers_local_repar.py  model_deep_all_encoder.py  net_bayes_conv.py
libdg/tasks/: a_task.py  b_task.py  task_mnist_color.py  utils_task.py  zoo_tasks.py
libdg/utils/: perf_bnn.py  perf_cluster.py
