[tool.poetry]
name = "libdg"
version = "0.1.0"
description = "Library of Domain Generalization"
authors = ["Xudong Sun <smilesun.east@gmail.com>", "Alexej Gossmann <alexej.gossmann@fda.hhs.gov>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.0.2"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
